--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -15,8 +15,13 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div>
-                    Page for setting up facebook profile
+                <div class="mt-5">
+                    Press the submit button to add  - 
+                    <ul>
+                        <li>Get started button</li>
+                        <li>Greeting text</li>
+                        <li>Persistent menu</li>
+                    </ul>
                 </div>
                 <div class="mt-2">
                     <button class="btn btn-primary" id="submitFacebookProfile" type="button">Submit</button>
